--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "word-game",
   "version": "0.1.0",
+  "homepage": "https://nvhoaidt.github.io/word-game/",
   "private": true,
   "author": "Hoai Nguyen Van <nguyenvanhoai1020@gmail.com>",
   "dependencies": {
@@ -12,13 +13,20 @@
     "process": "0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
     "rimraf": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "predev": "rimraf .parcel-cache dist",
     "dev": "parcel public/index.html",
-    "build": "parcel build public/index.html",
     "new-component": "new-component"
   },
-  "browserslist": "> 0.5%, last 2 versions, not dead"
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
