--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "process": "0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-focus-lock": "^2.12.1",
+    "react-remove-scroll": "^2.5.10",
     "react-scripts": "^5.0.1",
     "rimraf": "5.0.1"
   },
